# ansible-role-iceberg

./: .gitignore  README.md  pyproject.toml
defaults/: main.yml
meta/: main.yml
tasks/: authelia.yml  docker.yml  gitea.yml  main.yml  portainer.yml  postgresql.yml  traefik.yml
templates/: authelia_config.yml.j2  authelia_config_users.yml.j2
tests/: test.yml
vars/: main.yml
